@@ -1,6 +1,6 @@
 # build-to-host.m4
 # serial 5
-dnl Copyright (C) 2023-2024 Free Software Foundation, Inc.
+dnl Copyright (C) 2023-2025 Free Software Foundation, Inc.
 dnl This file is free software; the Free Software Foundation
 dnl gives unlimited permission to copy and/or distribute it,
 dnl with or without modifications, as long as this notice is preserved.
