@@ -1,9 +1,10 @@
 # gettext.m4
-# serial 81 (gettext-0.23)
-dnl Copyright (C) 1995-2014, 2016, 2018-2024 Free Software Foundation, Inc.
+# serial 81 (gettext-0.24)
+dnl Copyright (C) 1995-2025 Free Software Foundation, Inc.
 dnl This file is free software; the Free Software Foundation
 dnl gives unlimited permission to copy and/or distribute it,
 dnl with or without modifications, as long as this notice is preserved.
+dnl This file is offered as-is, without any warranty.
 dnl
 dnl This file can be used in projects which are not available under
 dnl the GNU General Public License or the GNU Lesser General Public
