@@ -1,6 +1,6 @@
 # lib-ld.m4
 # serial 13
-dnl Copyright (C) 1996-2003, 2009-2024 Free Software Foundation, Inc.
+dnl Copyright (C) 1996-2003, 2009-2025 Free Software Foundation, Inc.
 dnl This file is free software; the Free Software Foundation
 dnl gives unlimited permission to copy and/or distribute it,
 dnl with or without modifications, as long as this notice is preserved.
