@@ -1,6 +1,6 @@
 # lib-prefix.m4
 # serial 23
-dnl Copyright (C) 2001-2005, 2008-2024 Free Software Foundation, Inc.
+dnl Copyright (C) 2001-2005, 2008-2025 Free Software Foundation, Inc.
 dnl This file is free software; the Free Software Foundation
 dnl gives unlimited permission to copy and/or distribute it,
 dnl with or without modifications, as long as this notice is preserved.
