@@ -1,3 +1,15 @@
+2025-03-15  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* m4/build-to-host.m4: Upgrade to gettext-0.24.
+	* m4/gettext.m4: Upgrade to gettext-0.24.
+	* m4/iconv.m4: Upgrade to gettext-0.24.
+	* m4/intlmacosx.m4: Upgrade to gettext-0.24.
+	* m4/lib-ld.m4: Upgrade to gettext-0.24.
+	* m4/lib-link.m4: Upgrade to gettext-0.24.
+	* m4/lib-prefix.m4: Upgrade to gettext-0.24.
+	* m4/nls.m4: Upgrade to gettext-0.24.
+	* m4/progtest.m4: Upgrade to gettext-0.24.
+
 2024-12-20  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* configure.ac (AC_CONFIG_FILES): Add po/Makefile.in.
